--- a/toc.html
+++ b/toc.html
@@ -59,7 +59,7 @@
 </ul>
 
 </li>
-<li><a href="Preface.html#lab13">给教官的指引</a>
+<li><a href="Preface.html#lab13">给教师的指引</a>
 
 </li>
 <li><a href="Preface.html#lab14">翻译</a>
@@ -189,7 +189,7 @@
 <li><a href="Poly.html#lab126">偏应用</a>
 
 </li>
-<li><a href="Poly.html#lab127">离题：　柯里化</a>
+<li><a href="Poly.html#lab127">离题：柯里化</a>
 
 </li>
 <li><a href="Poly.html#lab129">过滤函数</a>
@@ -231,28 +231,28 @@
 <li><a href="MoreCoq.html#lab162">The <span class="inlinecode"><span class="id" type="tactic">inversion</span></span> tactic</a>
 
 </li>
-<li><a href="MoreCoq.html#lab166">Using Tactics on Hypotheses</a>
+<li><a href="MoreCoq.html#lab166">对假设使用证明策略</a>
 
 </li>
-<li><a href="MoreCoq.html#lab168">Varying the Induction Hypothesis</a>
+<li><a href="MoreCoq.html#lab168">改变归纳前的假设</a>
 
 </li>
-<li><a href="MoreCoq.html#lab177">Using <span class="inlinecode"><span class="id" type="tactic">destruct</span></span> on Compound Expressions</a>
+<li><a href="MoreCoq.html#lab177">对符合表达式使用<span class="inlinecode"><span class="id" type="tactic">destruct</span></span>证明策略</a>
 
 </li>
-<li><a href="MoreCoq.html#lab182">Review</a>
+<li><a href="MoreCoq.html#lab182">回顾</a>
 
 </li>
-<li><a href="MoreCoq.html#lab183">Additional Exercises</a>
+<li><a href="MoreCoq.html#lab183">附加练习</a>
 
 </li>
 </ul>
 <a href="Logic.html"><h2>Logic: Logic in Coq</h2></a>
 <ul class="doclist">
-<li><a href="Logic.html#lab191">Propositions</a>
+<li><a href="Logic.html#lab191">命题</a>
 
 </li>
-<li><a href="Logic.html#lab192">Proofs and Evidence</a>
+<li><a href="Logic.html#lab192">证明与证据</a>
 <ul class="doclist">
 <li><a href="Logic.html#lab194">Implications <i>are</i> functions</a>
 
