--- a/toc.html
+++ b/toc.html
@@ -237,7 +237,7 @@
 <li><a href="MoreCoq.html#lab168">改变归纳前的假设</a>
 
 </li>
-<li><a href="MoreCoq.html#lab177">对符合表达式使用<span class="inlinecode"><span class="id" type="tactic">destruct</span></span>证明策略</a>
+<li><a href="MoreCoq.html#lab177">对复合表达式使用<span class="inlinecode"><span class="id" type="tactic">destruct</span></span>证明策略</a>
 
 </li>
 <li><a href="MoreCoq.html#lab182">回顾</a>
